--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
 * {
   margin: 0;
 }
@@ -5,4 +7,31 @@
   text-align:center;
   font-style:italic;
   text-shadow:5px 5px red;
+}
+
+#home{
+  font-family: 'Poppins', sans-serif;
+  font-size:30px;
+  color:black;
+  right:240px;
+  top:10px;
+  position:absolute;
+}
+
+#login{
+  font-family: 'Poppins', sans-serif;
+  font-size:23px;
+  color:black;
+  right:50px;
+  top:15px;
+  position:absolute;
+}
+
+#regis{
+  font-family: 'Poppins', sans-serif;
+  font-size:23px;
+  color:black;
+  right:120px;
+  top:16px;
+  position:absolute;
 }
