--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-    display: flex;
+    display: block;
     width: 100vw;
     height: 100vh;
     justify-content: center;
@@ -7,3 +7,30 @@
     background: #b5ddef;
     font-family: Arial, sans-serif;
 }
+
+#home{
+    font-family: 'Poppins', sans-serif;
+    font-size:30px;
+    color:black;
+    right:240px;
+    top:10px;
+    position:absolute;
+  }
+  
+  #login{
+    font-family: 'Poppins', sans-serif;
+    font-size:23px;
+    color:black;
+    right:50px;
+    top:15px;
+    position:absolute;
+  }
+  
+  #regis{
+    font-family: 'Poppins', sans-serif;
+    font-size:23px;
+    color:black;
+    right:120px;
+    top:16px;
+    position:absolute;
+  }
