--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -1,4 +1,3 @@
-
 .register {
     width: 400px;
     background: #fff;
@@ -8,6 +7,12 @@
     padding: 1rem;
     align-items: center;
     text-align: center;
+    display: block;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-top:50px;
+    margin-left:550px;
 }
 
 .register > input {
