--- a/src/index.css
+++ b/src/index.css
@@ -3,35 +3,50 @@
 * {
   margin: 0;
 }
+
 #title{
   text-align:center;
   font-style:italic;
   text-shadow:5px 5px red;
+  color:black;
+  font-size:30px;
+  font-family:Impact;
 }
 
 #home{
   font-family: 'Poppins', sans-serif;
   font-size:30px;
   color:black;
-  right:240px;
-  top:10px;
-  position:absolute;
+  left: 970px;
+  top: 5px;
+  position: relative;
+  font-weight: 700;
 }
 
 #login{
   font-family: 'Poppins', sans-serif;
-  font-size:23px;
+  font-size:20px;
+  padding: 3px;
+  padding-right: 8px;
+  padding-left: 8px;
+  font-style: italic;
+  border: 3px solid black;
+  border-radius: 10px;
   color:black;
-  right:50px;
-  top:15px;
+  right:30px;
+  top:5px;
   position:absolute;
+  font-weight: 700;
 }
 
 #regis{
   font-family: 'Poppins', sans-serif;
   font-size:23px;
   color:black;
-  right:120px;
-  top:16px;
+  right:110px;
+  top: 5px;
   position:absolute;
+  font-weight: 700;
 }
+
+nav{height: 50px;}
